updated to bypass ad blocker

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
           </div>
           <div class="col-lg-6 col-md-12 col-sm-12 padding-none">
               
-            <img class="imagewrap" src="assets/img/ads/rightbanner2.jpg">
+            <img class="imagewrap" src="assets/img/rightbanner2.jpg">
               </div>
               
             </div>
