--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                     <i class="lni-envelope"></i>
                   </div>
                   <p><a href="mailto:ireayohospital@yahoo.com">ireayohospital@yahoo.com</a></p>
-                  <p><a href="mailto:info@ireayohospital.com.ng">info@ireayohospital.com.ng</a></p>
+                  <p><a href="mailto:contact@ireayohospital.com.ng">contact@ireayohospital.com.ng</a></p>
                 </div>
                 <div class="single-contact">
                   <div class="contact-icon">
